plik/plik-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: plik
  namespace: plik
spec:
  parentRefs:
    - name: plik
      sectionName: http
      kind: Gateway
      group: gateway.networking.k8s.io
  hostnames:
    - plik.raft.lutris.house
  rules:
    - backendRefs:
        - name: plik
          port: 8080
          kind: Service
          group: ""
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
